# simulador_tester

./: .gitignore  README.md  datos_rulkanis.py  main.py  pyproject.toml  reglas.py  resultados_simulacion.xlsx  simulador.py  ~$resultados_simulacion.xlsx
backup_simulador/: simulador.py
src/rulkanis/: carta.py  datos_rulkanis.py  event.py  jugador.py  logger.py  mazo.py  reglas.py  simulador.py
