[project]
name = "rulkanis_simulador"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nelson Landaeta", email = "phys.gabriel@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "jupyter>=1.1.1", "matplotlib>=3.10.1", "numpy>=2.2.5", "openpyxl>=3.1.5"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
